--- a/WaterIntake/style.css
+++ b/WaterIntake/style.css
@@ -29,7 +29,7 @@ body {
     display: -webkit-flex;
     align-items: center;
     justify-content: center;
-    color: #ffffff;
+    color: #6795d1;
     font-size: 64px;
 }
 .box .water {
